--- a/include/msdfgl.h.in
+++ b/include/msdfgl.h.in
@@ -49,7 +49,7 @@
 #include <GL/gl.h>
 #endif
 
-#define MSDFGL_VERSION "@msdfgl_VERSION@"
+#define MSDFGL_VERSION "%msdfgl_VERSION%"
 
 #ifdef __cplusplus
 extern "C" {
